# cross-platform-utils

./: .gitignore  CMakeLists.txt  helper.cmake
inc/: ipc.h  utils.h
src/: ipc.cpp  utils.cpp
test/: CMakeLists.txt  ipc_client.cpp  ipc_common.h  ipc_server.cpp  test-ipc.cpp
